--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sass": "^1.42.1",
+    "typeface-montserrat": "^1.1.13",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
