feat: add data store with stubbed data

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -9,7 +9,9 @@
       "@components": ["./src/components"],
       "@components/*": ["./src/components/*"],
       "@typings": ["./src/setup/typings"],
-      "@typings/*": ["./src/setup/typings/*"]
+      "@typings/*": ["./src/setup/typings/*"],
+      "@store": ["./src/store"],
+      "@store/*": ["./src/store/*"]
     }
   }
 }
