--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -11,7 +11,9 @@
       "@typings": ["./src/setup/typings"],
       "@typings/*": ["./src/setup/typings/*"],
       "@store": ["./src/store"],
-      "@store/*": ["./src/store/*"]
+      "@store/*": ["./src/store/*"],
+      "@providers": ["./src/providers"],
+      "@providers/*": ["./src/providers/*"]
     }
   }
 }
