feat: useOnClickOutside hook!

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -13,7 +13,9 @@
       "@store": ["./src/store"],
       "@store/*": ["./src/store/*"],
       "@providers": ["./src/providers"],
-      "@providers/*": ["./src/providers/*"]
+      "@providers/*": ["./src/providers/*"],
+      "@reactHooks": ["./src/reactHooks"],
+      "@reactHooks/*": ["./src/reactHooks/*"]
     }
   }
 }
